--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="portfolio.html">portfolio</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
                 </ul>
             </nav>
 
@@ -35,7 +35,7 @@
             <div class="header">
                 <h1>Contact</h1>
             </div>
-            <section id=="contact">
+            <section id="contact">
                 <div class="form">
                 <form>
                     Full Name:<br>
@@ -44,7 +44,7 @@
                     <input type="Email" placeholder="Enter Email"><br>
                     Message:<br>
                     <input type="Message" placeholder="Enter Comments"><br>
-                    <button type"submit" class="button">Submit</button>
+                    <button type="submit" class="button">Submit</button>
                 </div>    
                 </form>
             </div>
